--- a/02_main_problem_no_bounderys_variation.ipynb
+++ b/02_main_problem_no_bounderys_variation.ipynb
@@ -77,6 +77,8 @@
     "# Trainingsdaten e_0:float=1.00, C_c:float=0.005, delta_epsilon:float=0.0005, sigma_t:float=1.00, max_n:int=50\n",
     "oedo_parameter = {'e_0':1.00, 'C_c':0.005, 'delta_epsilon':0.0005, 'sigma_t':1.00, 'max_n':100, 'rand_epsilon':False}\n",
     "\n",
+    "new_test = False\n",
+    "\n",
     "graph_folder = 'graph'\n",
     "img_extensions = '.png'\n",
     "\n",
@@ -642,7 +644,7 @@
      "text": [
       "‼️Geladene Input Variablen:  ['sigma_t', 'delta_epsilon']\n",
       "‼️Geladene Output Variablen:  ['delta_sigma']\n",
-      "‼️Input points: {'data': LabelTensor([[[1.0000e+00, 5.0000e-04]],\n",
+      "{'data': LabelTensor([[[1.0000e+00, 5.0000e-04]],\n",
       "             [[1.2000e+00, 5.0000e-04]],\n",
       "             [[1.4400e+00, 5.0000e-04]],\n",
       "             [[1.7280e+00, 5.0000e-04]],\n",
@@ -750,8 +752,25 @@
     "from pina.geometry import CartesianDomain\n",
     "from pina import Condition\n",
     "\n",
+    "# Datengenerierung, falls Randbedingungen definiert\n",
+    "# problem.discretise_domain(n=993, mode='random', variables='all', locations='all') # Notwendig, wenn \"input_pts\" und \"output_pts\" nicht vorgegeben sind\n",
+    "if new_test:\n",
+    "    # Trainingsdaten e_0:float=1.00, C_c:float=0.005, delta_epsilon:float=0.0005, sigma_t:float=1.00, max_n:int=50\n",
+    "    oedo_parameter = {'e_0':1.00, 'C_c':0.005, 'delta_epsilon':0.0005, 'sigma_t':1.00, 'max_n':100, 'rand_epsilon':False}\n",
+    "    input_conditions = {}\n",
+    "    for i in range(max_input_pts):\n",
+    "        oedo_parameter['delta_epsilon'] = oedo_parameter['delta_epsilon'] + .0001\n",
+    "        data_dict = vars(Oedometer(**oedo_parameter))\n",
     "\n",
-    "input_conditions = {'data': Condition(input_points=input_points_combined, output_points=delta_sigma_train),}\n",
+    "        sigma_t_train = LabelTensor(tensor(data_dict['sigma_t'][0], dtype=torch.float).unsqueeze(-1),['sigma_t'])\n",
+    "        delta_epsilon_train = LabelTensor(tensor(data_dict['delta_epsilon'][0], dtype=torch.float).unsqueeze(-1), ['delta_epsilon'])\n",
+    "        delta_sigma_train = LabelTensor(tensor(data_dict['delta_sigma'][0], dtype=torch.float).unsqueeze(-1), ['delta_sigma'])\n",
+    "        # Kombinieren der Trainingsdaten (Verwendung von 'np.column_stack' für bessere Performance)\n",
+    "        input_points_combined = LabelTensor(torch.tensor(np.column_stack([data_dict['sigma_t'][0], data_dict['delta_epsilon'][0]]), dtype=torch.float), ['sigma_t', 'delta_epsilon'])\n",
+    "\n",
+    "        input_conditions['condition' + str(i)] = Condition(input_points=input_points_combined, output_points=delta_sigma_train)\n",
+    "else:\n",
+    "    input_conditions = {'data': Condition(input_points=input_points_combined, output_points=delta_sigma_train),}\n",
     "\n",
     "\n",
     "class SimpleODE(AbstractProblem):\n",
@@ -863,7 +882,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "GPU available: False, used: False\n"
+      "GPU available: False, used: False\n",
+      "TPU available: False, using: 0 TPU cores\n",
+      "HPU available: False, using: 0 HPUs\n"
      ]
     },
     {
@@ -879,20 +900,18 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "TPU available: False, using: 0 TPU cores\n",
-      "HPU available: False, using: 0 HPUs\n",
       "C:\\Users\\hab185\\Documents\\00_Tim\\01_Implementierung\\pina_oedometer\\venv\\Lib\\site-packages\\pytorch_lightning\\loops\\fit_loop.py:310: The number of training batches (10) is smaller than the logging interval Trainer(log_every_n_steps=50). Set a lower value for log_every_n_steps if you want to see logs for the training epoch.\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "157f70c8c0e94d7ab8c14f598a897ba1",
+       "model_id": "7f0cd1dee66043d08758ea70048a7895",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Training: |                                                                    | 0/? [00:00<?, ?it/s]"
+       "Training: |                                                                                                   …"
       ]
      },
      "metadata": {},
@@ -916,7 +935,7 @@
     {
      "data": {
       "text/plain": [
-       "{'data_loss': tensor(0.0457), 'mean_loss': tensor(0.0457)}"
+       "{'data_loss': tensor(0.1380), 'mean_loss': tensor(0.1380)}"
       ]
      },
      "execution_count": 8,
@@ -1006,26 +1025,26 @@
        "\n",
        "| Index | total_epsilon | delta_epsilon | sigma_t | True delta_sigma | Predicted delta_sigma | Test-Loss (True - Predicted) |\n",
        "|--|--------------|--------------|--------|-----------------|----------------------|-----------------------------|\n",
-       "| 0 | 0 | 0.0005 | 1.0 | 0.2 | 0.2039 | -0.0039 |\n",
-       "| 1 | 0.0005 | 0.0005 | 1.2 | 0.24 | 0.2398 | 0.0002 |\n",
-       "| 2 | 0.001 | 0.0005 | 1.44 | 0.288 | 0.2866 | 0.0014 |\n",
-       "| 3 | 0.0015 | 0.0005 | 1.728 | 0.3456 | 0.3468 | -0.0012 |\n",
-       "| 4 | 0.002 | 0.0005 | 2.0736 | 0.4147 | 0.4174 | -0.0027 |\n",
-       "| 5 | 0.0025 | 0.0005 | 2.4883 | 0.4977 | 0.4939 | 0.0038 |\n",
-       "| 6 | 0.003 | 0.0005 | 2.986 | 0.5972 | 0.5999 | -0.0026 |\n",
-       "| 7 | 0.0035 | 0.0005 | 3.5832 | 0.7166 | 0.7193 | -0.0027 |\n",
-       "| 8 | 0.004 | 0.0005 | 4.2998 | 0.86 | 0.8565 | 0.0035 |\n",
-       "| 9 | 0.0045 | 0.0005 | 5.1598 | 1.032 | 1.0318 | 0.0002 |\n",
-       "| 10 | 0.005 | 0.0005 | 6.1917 | 1.2383 | 1.2374 | 0.001 |\n",
-       "| 11 | 0.0055 | 0.0005 | 7.4301 | 1.486 | 1.482 | 0.004 |\n",
-       "| 12 | 0.006 | 0.0005 | 8.9161 | 1.7832 | 1.7763 | 0.0069 |\n",
-       "| 13 | 0.0065 | 0.0005 | 10.6993 | 2.1399 | 2.1297 | 0.0102 |\n",
-       "| 14 | 0.007 | 0.0005 | 12.8392 | 2.5678 | 2.5749 | -0.007 |\n",
-       "| 15 | 0.0075 | 0.0005 | 15.407 | 3.0814 | 3.1103 | -0.0288 |\n",
-       "| 16 | 0.008 | 0.0005 | 18.4884 | 3.6977 | 3.7463 | -0.0486 |\n",
-       "| 17 | 0.0085 | 0.0005 | 22.1861 | 4.4372 | 4.5096 | -0.0724 |\n",
-       "| 18 | 0.009 | 0.0005 | 26.6233 | 5.3247 | 5.4207 | -0.096 |\n",
-       "| 19 | 0.0095 | 0.0005 | 31.948 | 6.3896 | 6.5035 | -0.1139 |\n"
+       "| 0 | 0 | 0.0005 | 1.0 | 0.2 | 0.223 | -0.023 |\n",
+       "| 1 | 0.0005 | 0.0005 | 1.2 | 0.24 | 0.2479 | -0.0079 |\n",
+       "| 2 | 0.001 | 0.0005 | 1.44 | 0.288 | 0.28 | 0.008 |\n",
+       "| 3 | 0.0015 | 0.0005 | 1.728 | 0.3456 | 0.3313 | 0.0143 |\n",
+       "| 4 | 0.002 | 0.0005 | 2.0736 | 0.4147 | 0.4065 | 0.0082 |\n",
+       "| 5 | 0.0025 | 0.0005 | 2.4883 | 0.4977 | 0.4924 | 0.0053 |\n",
+       "| 6 | 0.003 | 0.0005 | 2.986 | 0.5972 | 0.6058 | -0.0086 |\n",
+       "| 7 | 0.0035 | 0.0005 | 3.5832 | 0.7166 | 0.7294 | -0.0128 |\n",
+       "| 8 | 0.004 | 0.0005 | 4.2998 | 0.86 | 0.8508 | 0.0091 |\n",
+       "| 9 | 0.0045 | 0.0005 | 5.1598 | 1.032 | 1.0193 | 0.0127 |\n",
+       "| 10 | 0.005 | 0.0005 | 6.1917 | 1.2383 | 1.2342 | 0.0041 |\n",
+       "| 11 | 0.0055 | 0.0005 | 7.4301 | 1.486 | 1.4826 | 0.0034 |\n",
+       "| 12 | 0.006 | 0.0005 | 8.9161 | 1.7832 | 1.7823 | 0.0009 |\n",
+       "| 13 | 0.0065 | 0.0005 | 10.6993 | 2.1399 | 2.1397 | 0.0001 |\n",
+       "| 14 | 0.007 | 0.0005 | 12.8392 | 2.5678 | 2.5686 | -0.0008 |\n",
+       "| 15 | 0.0075 | 0.0005 | 15.407 | 3.0814 | 3.0835 | -0.0021 |\n",
+       "| 16 | 0.008 | 0.0005 | 18.4884 | 3.6977 | 3.7217 | -0.024 |\n",
+       "| 17 | 0.0085 | 0.0005 | 22.1861 | 4.4372 | 4.49 | -0.0528 |\n",
+       "| 18 | 0.009 | 0.0005 | 26.6233 | 5.3247 | 5.4132 | -0.0886 |\n",
+       "| 19 | 0.0095 | 0.0005 | 31.948 | 6.3896 | 6.521 | -0.1314 |\n"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -1161,26 +1180,26 @@
        "\n",
        "| Index | total_epsilon | delta_epsilon | sigma_t | True delta_sigma | Predicted delta_sigma | Test-Loss (True - Predicted) |\n",
        "|--|--------------|--------------|--------|-----------------|----------------------|-----------------------------|\n",
-       "| 0 | 0 | 0.0005 | 1500 | 300 | 300.1602 | -0.1602 |\n",
-       "| 1 | 0 | 0.0 | 0 | 0 | 0.0794 | -0.0794 |\n",
-       "| 2 | 0 | 0.0 | 0 | 0 | 0.0794 | -0.0794 |\n",
-       "| 3 | 0 | 0.0 | 0 | 0 | 0.0794 | -0.0794 |\n",
-       "| 4 | 0 | 0.0 | 0 | 0 | 0.0794 | -0.0794 |\n",
-       "| 5 | 0 | 0.0 | 0 | 0 | 0.0794 | -0.0794 |\n",
-       "| 6 | 0 | 0.0 | 0 | 0 | 0.0794 | -0.0794 |\n",
-       "| 7 | 0 | 0.0 | 0 | 0 | 0.0794 | -0.0794 |\n",
-       "| 8 | 0 | 0.0 | 0 | 0 | 0.0794 | -0.0794 |\n",
-       "| 9 | 0 | 0.0 | 0 | 0 | 0.0794 | -0.0794 |\n",
-       "| 10 | 0 | 0.0 | 0 | 0 | 0.0794 | -0.0794 |\n",
-       "| 11 | 0 | 0.0 | 0 | 0 | 0.0794 | -0.0794 |\n",
-       "| 12 | 0 | 0.0 | 0 | 0 | 0.0794 | -0.0794 |\n",
-       "| 13 | 0 | 0.0 | 0 | 0 | 0.0794 | -0.0794 |\n",
-       "| 14 | 0 | 0.0 | 0 | 0 | 0.0794 | -0.0794 |\n",
-       "| 15 | 0 | 0.0 | 0 | 0 | 0.0794 | -0.0794 |\n",
-       "| 16 | 0 | 0.0 | 0 | 0 | 0.0794 | -0.0794 |\n",
-       "| 17 | 0 | 0.0 | 0 | 0 | 0.0794 | -0.0794 |\n",
-       "| 18 | 0 | 0.0 | 0 | 0 | 0.0794 | -0.0794 |\n",
-       "| 19 | 0 | 0.0 | 0 | 0 | 0.0794 | -0.0794 |\n"
+       "| 0 | 0 | 0.0005 | 1500 | 300 | 300.321 | -0.321 |\n",
+       "| 1 | 0 | 0.0 | 0 | 0 | 0.1172 | -0.1172 |\n",
+       "| 2 | 0 | 0.0 | 0 | 0 | 0.1172 | -0.1172 |\n",
+       "| 3 | 0 | 0.0 | 0 | 0 | 0.1172 | -0.1172 |\n",
+       "| 4 | 0 | 0.0 | 0 | 0 | 0.1172 | -0.1172 |\n",
+       "| 5 | 0 | 0.0 | 0 | 0 | 0.1172 | -0.1172 |\n",
+       "| 6 | 0 | 0.0 | 0 | 0 | 0.1172 | -0.1172 |\n",
+       "| 7 | 0 | 0.0 | 0 | 0 | 0.1172 | -0.1172 |\n",
+       "| 8 | 0 | 0.0 | 0 | 0 | 0.1172 | -0.1172 |\n",
+       "| 9 | 0 | 0.0 | 0 | 0 | 0.1172 | -0.1172 |\n",
+       "| 10 | 0 | 0.0 | 0 | 0 | 0.1172 | -0.1172 |\n",
+       "| 11 | 0 | 0.0 | 0 | 0 | 0.1172 | -0.1172 |\n",
+       "| 12 | 0 | 0.0 | 0 | 0 | 0.1172 | -0.1172 |\n",
+       "| 13 | 0 | 0.0 | 0 | 0 | 0.1172 | -0.1172 |\n",
+       "| 14 | 0 | 0.0 | 0 | 0 | 0.1172 | -0.1172 |\n",
+       "| 15 | 0 | 0.0 | 0 | 0 | 0.1172 | -0.1172 |\n",
+       "| 16 | 0 | 0.0 | 0 | 0 | 0.1172 | -0.1172 |\n",
+       "| 17 | 0 | 0.0 | 0 | 0 | 0.1172 | -0.1172 |\n",
+       "| 18 | 0 | 0.0 | 0 | 0 | 0.1172 | -0.1172 |\n",
+       "| 19 | 0 | 0.0 | 0 | 0 | 0.1172 | -0.1172 |\n"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -1249,26 +1268,26 @@
        "\n",
        "| Index | total_epsilon | delta_epsilon | sigma_t | True delta_sigma | Predicted delta_sigma | Test-Loss (True - Predicted) |\n",
        "|--|--------------|--------------|--------|-----------------|----------------------|-----------------------------|\n",
-       "| 0 | 0 | 0.0005 | 1500 | 300.0 | 300.1602 | -0.1602 |\n",
-       "| 1 | 0 | 0.0 | 0 | 0.0 | 0.0794 | -0.0794 |\n",
-       "| 2 | 0 | 0.0 | 0 | 0.0 | 0.0794 | -0.0794 |\n",
-       "| 3 | 0 | 0.0 | 0 | 0.0 | 0.0794 | -0.0794 |\n",
-       "| 4 | 0 | 0.0 | 0 | 0.0 | 0.0794 | -0.0794 |\n",
-       "| 5 | 0 | 0.0 | 0 | 0.0 | 0.0794 | -0.0794 |\n",
-       "| 6 | 0 | 0.0 | 0 | 0.0 | 0.0794 | -0.0794 |\n",
-       "| 7 | 0 | 0.0 | 0 | 0.0 | 0.0794 | -0.0794 |\n",
-       "| 8 | 0 | 0.0 | 0 | 0.0 | 0.0794 | -0.0794 |\n",
-       "| 9 | 0 | 0.0005 | 854 | 170.8 | 170.9602 | -0.1602 |\n",
-       "| 10 | 0 | 0.0 | 0 | 0.0 | 0.0794 | -0.0794 |\n",
-       "| 11 | 0 | 0.0 | 0 | 0.0 | 0.0794 | -0.0794 |\n",
-       "| 12 | 0 | 0.0 | 0 | 0.0 | 0.0794 | -0.0794 |\n",
-       "| 13 | 0 | 0.0 | 0 | 0.0 | 0.0794 | -0.0794 |\n",
-       "| 14 | 0 | 0.0 | 0 | 0.0 | 0.0794 | -0.0794 |\n",
-       "| 15 | 0 | 0.0 | 0 | 0.0 | 0.0794 | -0.0794 |\n",
-       "| 16 | 0 | 0.0 | 0 | 0.0 | 0.0794 | -0.0794 |\n",
-       "| 17 | 0 | 0.0 | 0 | 0.0 | 0.0794 | -0.0794 |\n",
-       "| 18 | 0 | 0.0 | 0 | 0.0 | 0.0794 | -0.0794 |\n",
-       "| 19 | 0 | 0.0 | 0 | 0.0 | 0.0794 | -0.0794 |\n"
+       "| 0 | 0 | 0.0005 | 1500 | 300.0 | 300.321 | -0.321 |\n",
+       "| 1 | 0 | 0.0 | 0 | 0.0 | 0.1172 | -0.1172 |\n",
+       "| 2 | 0 | 0.0 | 0 | 0.0 | 0.1172 | -0.1172 |\n",
+       "| 3 | 0 | 0.0 | 0 | 0.0 | 0.1172 | -0.1172 |\n",
+       "| 4 | 0 | 0.0 | 0 | 0.0 | 0.1172 | -0.1172 |\n",
+       "| 5 | 0 | 0.0 | 0 | 0.0 | 0.1172 | -0.1172 |\n",
+       "| 6 | 0 | 0.0 | 0 | 0.0 | 0.1172 | -0.1172 |\n",
+       "| 7 | 0 | 0.0 | 0 | 0.0 | 0.1172 | -0.1172 |\n",
+       "| 8 | 0 | 0.0 | 0 | 0.0 | 0.1172 | -0.1172 |\n",
+       "| 9 | 0 | 0.0005 | 854 | 170.8 | 171.121 | -0.321 |\n",
+       "| 10 | 0 | 0.0 | 0 | 0.0 | 0.1172 | -0.1172 |\n",
+       "| 11 | 0 | 0.0 | 0 | 0.0 | 0.1172 | -0.1172 |\n",
+       "| 12 | 0 | 0.0 | 0 | 0.0 | 0.1172 | -0.1172 |\n",
+       "| 13 | 0 | 0.0 | 0 | 0.0 | 0.1172 | -0.1172 |\n",
+       "| 14 | 0 | 0.0 | 0 | 0.0 | 0.1172 | -0.1172 |\n",
+       "| 15 | 0 | 0.0 | 0 | 0.0 | 0.1172 | -0.1172 |\n",
+       "| 16 | 0 | 0.0 | 0 | 0.0 | 0.1172 | -0.1172 |\n",
+       "| 17 | 0 | 0.0 | 0 | 0.0 | 0.1172 | -0.1172 |\n",
+       "| 18 | 0 | 0.0 | 0 | 0.0 | 0.1172 | -0.1172 |\n",
+       "| 19 | 0 | 0.0 | 0 | 0.0 | 0.1172 | -0.1172 |\n"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -1337,26 +1356,26 @@
        "\n",
        "| Index | total_epsilon | delta_epsilon | sigma_t | True delta_sigma | Predicted delta_sigma | Test-Loss (True - Predicted) |\n",
        "|--|--------------|--------------|--------|-----------------|----------------------|-----------------------------|\n",
-       "| 0 | 0 | 0.001 | 1500 | 600.0 | 300.1602 | 299.8398 |\n",
-       "| 1 | 0 | 0.0 | 0 | 0.0 | 0.0794 | -0.0794 |\n",
-       "| 2 | 0 | 0.0 | 0 | 0.0 | 0.0794 | -0.0794 |\n",
-       "| 3 | 0 | 0.0 | 0 | 0.0 | 0.0794 | -0.0794 |\n",
-       "| 4 | 0 | 0.0 | 0 | 0.0 | 0.0794 | -0.0794 |\n",
-       "| 5 | 0 | 0.0 | 0 | 0.0 | 0.0794 | -0.0794 |\n",
-       "| 6 | 0 | 0.0 | 0 | 0.0 | 0.0794 | -0.0794 |\n",
-       "| 7 | 0 | 0.0 | 0 | 0.0 | 0.0794 | -0.0794 |\n",
-       "| 8 | 0 | 0.0 | 0 | 0.0 | 0.0794 | -0.0794 |\n",
-       "| 9 | 0 | 0.0005 | 854 | 341.6 | 170.9602 | 170.6398 |\n",
-       "| 10 | 0 | 0.0 | 0 | 0.0 | 0.0794 | -0.0794 |\n",
-       "| 11 | 0 | 0.0 | 0 | 0.0 | 0.0794 | -0.0794 |\n",
-       "| 12 | 0 | 0.0 | 0 | 0.0 | 0.0794 | -0.0794 |\n",
-       "| 13 | 0 | 0.0 | 0 | 0.0 | 0.0794 | -0.0794 |\n",
-       "| 14 | 0 | 0.0 | 0 | 0.0 | 0.0794 | -0.0794 |\n",
-       "| 15 | 0 | 0.0 | 0 | 0.0 | 0.0794 | -0.0794 |\n",
-       "| 16 | 0 | 0.0 | 0 | 0.0 | 0.0794 | -0.0794 |\n",
-       "| 17 | 0 | 0.0 | 0 | 0.0 | 0.0794 | -0.0794 |\n",
-       "| 18 | 0 | 0.0 | 0 | 0.0 | 0.0794 | -0.0794 |\n",
-       "| 19 | 0 | 0.0 | 0 | 0.0 | 0.0794 | -0.0794 |\n"
+       "| 0 | 0 | 0.001 | 1500 | 600.0 | 300.321 | 299.679 |\n",
+       "| 1 | 0 | 0.0 | 0 | 0.0 | 0.1172 | -0.1172 |\n",
+       "| 2 | 0 | 0.0 | 0 | 0.0 | 0.1172 | -0.1172 |\n",
+       "| 3 | 0 | 0.0 | 0 | 0.0 | 0.1172 | -0.1172 |\n",
+       "| 4 | 0 | 0.0 | 0 | 0.0 | 0.1172 | -0.1172 |\n",
+       "| 5 | 0 | 0.0 | 0 | 0.0 | 0.1172 | -0.1172 |\n",
+       "| 6 | 0 | 0.0 | 0 | 0.0 | 0.1172 | -0.1172 |\n",
+       "| 7 | 0 | 0.0 | 0 | 0.0 | 0.1172 | -0.1172 |\n",
+       "| 8 | 0 | 0.0 | 0 | 0.0 | 0.1172 | -0.1172 |\n",
+       "| 9 | 0 | 0.0005 | 854 | 341.6 | 171.121 | 170.479 |\n",
+       "| 10 | 0 | 0.0 | 0 | 0.0 | 0.1172 | -0.1172 |\n",
+       "| 11 | 0 | 0.0 | 0 | 0.0 | 0.1172 | -0.1172 |\n",
+       "| 12 | 0 | 0.0 | 0 | 0.0 | 0.1172 | -0.1172 |\n",
+       "| 13 | 0 | 0.0 | 0 | 0.0 | 0.1172 | -0.1172 |\n",
+       "| 14 | 0 | 0.0 | 0 | 0.0 | 0.1172 | -0.1172 |\n",
+       "| 15 | 0 | 0.0 | 0 | 0.0 | 0.1172 | -0.1172 |\n",
+       "| 16 | 0 | 0.0 | 0 | 0.0 | 0.1172 | -0.1172 |\n",
+       "| 17 | 0 | 0.0 | 0 | 0.0 | 0.1172 | -0.1172 |\n",
+       "| 18 | 0 | 0.0 | 0 | 0.0 | 0.1172 | -0.1172 |\n",
+       "| 19 | 0 | 0.0 | 0 | 0.0 | 0.1172 | -0.1172 |\n"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
