--- a/02_main_problem_no_bounderys_variation.ipynb
+++ b/02_main_problem_no_bounderys_variation.ipynb
@@ -1421,9 +1421,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (venv)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "venv"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1435,7 +1435,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
