--- a/tutorials/6-BigDataAnalytics-E.ipynb
+++ b/tutorials/6-BigDataAnalytics-E.ipynb
@@ -435,7 +435,7 @@
     "    for i in range(L-tw):\n",
     "        train_seq = input_data[i:i+tw]\n",
     "        train_label = input_data[i+tw:i+tw+1]\n",
-    "        inout_seq.append((train_seq ,train_label))\n",
+    "        inout_seq.append((train_seq ,train_<label))\n",
     "    return inout_seq\n",
     "\n",
     "# Set an appropiate Train window\n",
