--- a/02_nn_lstm_current.ipynb
+++ b/02_nn_lstm_current.ipynb
@@ -7,15 +7,19 @@
     "id": "8eed3593-c200-4353-96ac-b4508e0aafea"
    },
    "source": [
-    "## LSTM Model for Oedometer Data Prediction\n",
+    "# LSTM Model for Oedometer Data Prediction\n",
     "This code implements an LSTM model to predict future values based on time-series data for a geotechnical engineering problem. The goal is to predict delta_sigma values from the given inputs sigma_t (stress) and delta_epsilon (strain). Below are the code blocks with explanations.\n",
     "\n",
-    "### Importing Necessary Libraries"
+    "\n",
+    "---\n",
+    "\n",
+    "\n",
+    "## Importing Necessary Libraries"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "3e4c446a-ed81-46b4-a5e4-90f6a55c1afd",
    "metadata": {
     "id": "3e4c446a-ed81-46b4-a5e4-90f6a55c1afd"
@@ -43,12 +47,16 @@
    "source": [
     "This section imports all the necessary libraries, including PyTorch, pandas, and matplotlib, which are used for neural network operations, data handling, and visualization.\n",
     "\n",
-    "### Setting Parameters"
+    "\n",
+    "---\n",
+    "\n",
+    "\n",
+    "## Setting Parameters"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "1db9fdfa-2bdf-425b-a34f-517b7608404b",
    "metadata": {
     "id": "1db9fdfa-2bdf-425b-a34f-517b7608404b"
@@ -67,13 +75,21 @@
     "id": "caec504e-2c5c-452e-bc33-0883ac04dc72"
    },
    "source": [
+    "Here, we define two key parameters:\n",
     "\n",
-    "## Preloaded Modules"
+    "*   `debug_mode`: Used to toggle debugging functionalities.\n",
+    "*   `normalize`: A flag to enable or disable data normalization.\n",
+    "\n",
+    "\n",
+    "---\n",
+    "\n",
+    "\n",
+    "## Preloaded Helper Functions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "464f85c5-4347-47b8-a999-876c3405ab38",
    "metadata": {
     "id": "464f85c5-4347-47b8-a999-876c3405ab38"
@@ -188,12 +204,18 @@
     "id": "23dbada5-603e-41c4-a741-932497c15772"
    },
    "source": [
+    "This function converts a dictionary of lists into a Markdown table for easy visualization in Jupyter Notebooks. It helps in presenting data in a clear and structured way during debugging and analysis.\n",
+    "\n",
+    "\n",
+    "---\n",
+    "\n",
+    "\n",
     "## Check for use of CONDA if available"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "45429180-216e-482f-be87-1702b19c8890",
    "metadata": {
     "colab": {
@@ -225,29 +247,22 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd8e8541-8716-411b-87f3-bcf5f94b71c9",
-   "metadata": {
-    "id": "fd8e8541-8716-411b-87f3-bcf5f94b71c9"
-   },
-   "source": [
-    "# Recurrent Neural Networks\n",
-    "\n",
-    "Just as people do not have to think again each time about the things they have already learned, it is also possible to teach neural networks to recall knowledge they were being taught. This is done in so-called Recurrent Neural Networks (RNNs) with loops inside, which allow information to be retained. Currently the most used architectures of RNNs are Long short-term memory (LSTM) networks. LSTMs are RNNs that overcome the problem of long-term dependencies and thus have achieved the most state-of-the-art results in this area. In this exercise we will look at how to use LSTMs to predict future values using time series data sets."
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "aee5e68d-54d7-40dd-bd8c-91f6c7349e3a",
    "metadata": {
     "id": "aee5e68d-54d7-40dd-bd8c-91f6c7349e3a"
    },
    "source": [
-    "## Data processing"
+    "\n",
+    "\n",
+    "---\n",
+    "\n",
+    "\n",
+    "## Defining the Oedometer Class"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "c80cbec0-a5d5-4310-88a0-db99ec043b36",
    "metadata": {
     "id": "c80cbec0-a5d5-4310-88a0-db99ec043b36"
@@ -334,8 +349,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "P4zh-pBwwQSK",
+   "metadata": {
+    "id": "P4zh-pBwwQSK"
+   },
+   "source": [
+    "The `Oedometer` class simulates the calculation of `delta_sigma` values based on various material parameters such as `sigma_t` (stress), `delta_epsilon` (strain), and others. The class provides methods to adjust list lengths and perform calculations that simulate geotechnical behavior.\n",
+    "\n",
+    "\n",
+    "---\n",
+    "\n",
+    "\n",
+    "## Data Generation and Processing"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "f9fb2661-f310-4b18-ab78-d819b4c9376b",
    "metadata": {
     "colab": {
@@ -385,8 +416,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "Pmfuh71rwZYg",
+   "metadata": {
+    "id": "Pmfuh71rwZYg"
+   },
+   "source": [
+    "This part generates synthetic data for `sigma_t` (stress) and `delta_epsilon` (strain) to simulate the inputs. The class Oedometer is used to compute `delta_sigma` values from the generated data.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "\n",
+    "## Visualizing the Data"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "f05dca2c-7485-48cd-ba46-c46330373129",
    "metadata": {
     "colab": {
@@ -1437,8 +1483,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "cp26_ZYawkq2",
+   "metadata": {
+    "id": "cp26_ZYawkq2"
+   },
+   "source": [
+    "Here, the raw data is converted into a pandas DataFrame and displayed as a Markdown table. This allows for easy inspection of the data before feeding it into the LSTM model.\n",
+    "\n",
+    "\n",
+    "---\n",
+    "\n",
+    "\n",
+    "## Data Normalization"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "qsjRsF4bDCxI",
    "metadata": {
     "id": "qsjRsF4bDCxI"
@@ -1478,19 +1540,18 @@
     "id": "lYOajlZuOb0r"
    },
    "source": [
-    "### Warum nur der Input skaliert wird\n",
+    "This function normalizes input tensors using the Min-Max scaling method. Normalization helps in improving the training stability by ensuring that all features are within the same scale.\n",
     "\n",
-    "In der Regel wird nur der **Input** normalisiert, weil der **Output** oft als das Ziel betrachtet wird, das das Modell vorhersagen soll. Das Ziel soll in der gleichen Skala und den gleichen Einheiten bleiben, um eine einfache Interpretation und Rücktransformation der Vorhersagen zu ermöglichen. Wenn der Output normalisiert wird, muss er nach der Vorhersage wieder denormalisiert werden, was zusätzliche Komplexität verursacht.\n",
     "\n",
-    "Die Eingabedaten haben häufig eine sehr unterschiedliche Skala, und die Normalisierung stellt sicher, dass alle Eingabefeatures im gleichen Bereich liegen, was das Training des Modells stabiler und effizienter macht.\n",
+    "---\n",
     "\n",
-    "> **StackOverflow:**\n",
-    "> - [Stack Overflow Neural Networks normalizing output data](https://stackoverflow.com/questions/42604261/neural-networks-normalizing-output-data)"
+    "## Creating the Dataset for LSTM\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "86b39746-e5a5-4ad7-8a2e-941b6539639a",
    "metadata": {
     "colab": {
@@ -1563,8 +1624,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "qBsMWCXnxC1L",
+   "metadata": {
+    "id": "qBsMWCXnxC1L"
+   },
+   "source": [
+    "This function creates the input-output pairs for the LSTM model. The `lookback` parameter determines how many previous time steps are used to predict the next value. The function normalizes the input data if the `normalize` flag is set to `True`."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "0d8133f1-409f-4879-a685-ec141fb4189f",
    "metadata": {
     "colab": {
@@ -1598,45 +1669,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "pwK3rhIkSlRj",
-   "metadata": {
-    "id": "pwK3rhIkSlRj"
-   },
-   "source": [
-    "### Warum der erste Output-Wert im Trainingsdatensatz \"fehlt\"\n",
-    "\n",
-    "Bei der Vorbereitung von Zeitreihendaten für ein Long Short-Term Memory (LSTM) Modell, insbesondere wenn ein `lookback`-Wert größer als Null verwendet wird, gibt es eine wichtige Besonderheit bezüglich des ersten Elements im Ziel-Datensatz (`y`).\n",
-    "\n",
-    "**Die Logik von `create_dataset`:**\n",
-    "\n",
-    "Unsere `create_dataset` Funktion erstellt Paare von Input-Sequenzen (`X`) und den entsprechenden zukünftigen Zielwerten (`y`). Bei einem `lookback` von $N$:\n",
-    "\n",
-    "*   Der **Input** für das $i$-te Trainingsbeispiel (`X[i]`) besteht aus den Daten der letzten $N$ Zeitschritte (von Index $i$ bis $i + N - 1$ im ursprünglichen DataFrame).\n",
-    "*   Der **Output** für das $i$-te Trainingsbeispiel (`y[i]`) ist der Wert des darauf folgenden Zeitschritts (am Index $i + N$ im ursprünglichen DataFrame).\n",
-    "\n",
-    "**Der Effekt des `lookback`:**\n",
-    "\n",
-    "Betrachten wir den Fall mit `lookback = 1` (wie in unserem Notebook):\n",
-    "\n",
-    "*   Das erste Trainingsbeispiel (`i=0`) hat als Input die Daten von Index 0 im Original-DataFrame und als Output die Daten von Index 1.\n",
-    "*   Das zweite Trainingsbeispiel (`i=1`) hat als Input die Daten von Index 1 im Original-DataFrame und als Output die Daten von Index 2.\n",
-    "*   Und so weiter, bis zum letzten möglichen Paar.\n",
-    "\n",
-    "**Warum der erste Wert im Originaldatensatz übersprungen wird:**\n",
-    "\n",
-    "Der allererste Wert im ursprünglichen DataFrame (am Index 0) kann nicht als Zielwert (`y`) für das erste Trainingsbeispiel verwendet werden, weil es keine vorherigen Daten gibt (bei einem `lookback > 0`), die als Input-Sequenz dienen könnten, um diesen Wert vorherzusagen.\n",
-    "\n",
-    "**Zusammenfassend:**\n",
-    "\n",
-    "Wenn `lookback > 0` ist, werden die ersten `lookback` Elemente des ursprünglichen DataFrames nicht als Zielwerte (`y`) in den vom `create_dataset` erzeugten Tensoren erscheinen. Dies ist kein Fehler, sondern eine notwendige Konsequenz der Vorbereitung von Zeitreihendaten für ein sequenzbasiertes Modell wie ein LSTM, das eine Vergangenheit benötigt, um die Zukunft vorherzusagen.\n",
-    "\n",
-    "Die Tabellen zur Denormalisierungsüberprüfung zeigen diese Logik durch die Spalten \"Input Rohdaten Index\" und \"Output Rohdaten Index\", die die genaue Position der Daten im ursprünglichen Datensatz referenzieren."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "MrCd2SbaLZBV",
    "metadata": {
     "colab": {
@@ -1784,8 +1818,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "Fkt6OwKTxjXC",
+   "metadata": {
+    "id": "Fkt6OwKTxjXC"
+   },
+   "source": [
+    "---\n",
+    "\n",
+    "\n",
+    "## LSTM Model Definition"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "e4faff38-40ab-485b-a758-7eb316c7e8a7",
    "metadata": {
     "id": "e4faff38-40ab-485b-a758-7eb316c7e8a7"
@@ -1807,8 +1854,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f6FbWR9KxsEL",
+   "metadata": {
+    "id": "f6FbWR9KxsEL"
+   },
+   "source": [
+    "This is the definition of the LSTM model. It uses one LSTM layer followed by a fully connected layer. The model learns from the input sequence and makes a prediction about the output value.\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "e26b13fa-21ad-4800-aea6-6db1bbeef8d3",
    "metadata": {
     "id": "e26b13fa-21ad-4800-aea6-6db1bbeef8d3"
@@ -1828,8 +1886,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "r29vWyV3xwBm",
+   "metadata": {
+    "id": "r29vWyV3xwBm"
+   },
+   "source": [
+    "\n",
+    "\n",
+    "---\n",
+    "\n",
+    "\n",
+    "## Model Training with Early Stopping"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "a446ada0-bbee-46c2-9a87-253f6c324e83",
    "metadata": {
     "colab": {
@@ -2930,8 +3003,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "S8MwWIb9x234",
+   "metadata": {
+    "id": "S8MwWIb9x234"
+   },
+   "source": [
+    "This section implements the training loop with early stopping. Early stopping monitors the validation loss and stops the training process if the loss does not improve after a set number of epochs (`patience`).\n",
+    "\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## Loss Plotting"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "40c2bd79-ee9e-4b97-a744-ee65cbe67db5",
    "metadata": {
     "colab": {
@@ -2965,8 +3053,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "YwwI0U0lx8Fc",
+   "metadata": {
+    "id": "YwwI0U0lx8Fc"
+   },
+   "source": [
+    "This code generates a plot of the training loss over epochs. Visualizing the loss curve is important for diagnosing model convergence and training performance.\n",
+    "\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## Residual and Prediction Plots"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "ddb8ebf5-c49c-45b4-846c-b14c03c3bc3e",
    "metadata": {
     "colab": {
@@ -3034,30 +3137,37 @@
     "    plt.legend()\n",
     "    plt.show()\n",
     "\n",
-    "def true_vs_pred_plot(y_true, y_pred):\n",
-    "    plt.figure(figsize=(10,4))\n",
-    "    plt.plot(target[SEQ_LEN:], label=\"True\")\n",
-    "    plt.plot(y_pred,           label=\"Predicted\")\n",
-    "    plt.title(\"Nicht-lineare Vorhersage (2 Inputs → 1 Output)\")\n",
-    "    plt.legend(); plt.tight_layout(); plt.show()\n",
-    "\n",
-    "\n",
     "y_true = []\n",
     "y_pred = []\n",
     "\n",
     "model.eval()\n",
     "with torch.no_grad():\n",
-    "    y_pred = model(X_test).cpu().numpy().ravel()\n",
-    "    y_true     = y_test.cpu().numpy().ravel()\n",
+    "    y_pred_unsorted = model(X_test).cpu().numpy().ravel()\n",
+    "    y_true_unsorted     = y_test.cpu().numpy().ravel()\n",
+    "\n",
+    "    sorted_indices = np.argsort(y_true_unsorted)\n",
+    "\n",
+    "    y_pred = y_pred_unsorted[sorted_indices]\n",
+    "    y_true = y_true_unsorted[sorted_indices]\n",
     "\n",
     "print(min_max_denormalize(X_test)[0:10].tolist())\n",
-    "print(y_true[0:10])\n",
-    "print(y_pred[0:10])"
+    "print(y_pred[0:10])\n",
+    "print(y_true_[0:10])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "gPaTCRizyMfO",
+   "metadata": {
+    "id": "gPaTCRizyMfO"
+   },
+   "source": [
+    "This function plots the residuals (i.e., the difference between predicted and true values) to check how well the model is fitting the data. A similar function `plot_pred_vs_real` is used to visualize the predicted vs real values.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "07e0f670-e99d-483f-8965-1287c8da2667",
    "metadata": {
     "colab": {
@@ -3085,7 +3195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "aca153a0-b827-427b-b893-3d27c8cf5d3a",
    "metadata": {
     "colab": {
@@ -3114,16 +3224,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33414203-b2f5-4674-a397-3510c0b72e76",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot_pred_vs_real_line(y_true, y_pred)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
    "id": "ab07bd80-b73a-42d4-9f93-9cf829e0a993",
    "metadata": {
     "colab": {
@@ -3370,8 +3470,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "rXuRwIvEyPWo",
+   "metadata": {
+    "id": "rXuRwIvEyPWo"
+   },
+   "source": [
+    "\n",
+    "\n",
+    "---\n",
+    "\n",
+    "\n",
+    "## Final Model Evaluation and Prediction"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "id": "m2GmB0hcXtpM",
    "metadata": {
     "colab": {
@@ -3444,7 +3559,7 @@
     "        tuple: Ein Tuple mit (denormalisierte_prognose, wahrer_delta_sigma_wert),\n",
     "               wobei der wahre Wert aus der Oedometer-Klasse ermittelt wird.\n",
     "    \"\"\"\n",
-    "    \n",
+    "\n",
     "    input_tensor = torch.tensor([[sigma_t_input, delta_epsilon_input]], dtype=torch.float32) # Shape (1, 1, 2)\n",
     "\n",
     "    # Optional Normalisierung anwenden\n",
@@ -3513,13 +3628,21 @@
     "| Differenz (Prognose - Wahr) | {difference:.4f}   |\n",
     "\"\"\"))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "Z8ltkwqPyT3b",
+   "metadata": {
+    "id": "Z8ltkwqPyT3b"
+   },
+   "source": [
+    "This final section makes a prediction using the trained LSTM model and compares the predicted value with the true value calculated using the `Oedometer` class. The results are displayed in a Markdown table for easy inspection."
+   ]
   }
  ],
  "metadata": {
   "colab": {
-   "include_colab_link": true,
-   "provenance": [],
-   "toc_visible": true
+   "provenance": []
   },
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
