--- a/tutorials/01_tutorial_introduction.ipynb
+++ b/tutorials/01_tutorial_introduction.ipynb
@@ -382,9 +382,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (venv)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "venv"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -396,7 +396,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
