Update-Pina-PyTorch-Oedometer

--- a/02_oedometer_pina.ipynb
+++ b/02_oedometer_pina.ipynb
@@ -39,7 +39,7 @@
     "\n",
     "<br> \n",
     "\n",
-    "Um das PINA-Model zu testen werden wir folgende vorberechnete Werte verwenden: `Input` { $\\sigma_t$ ; $\\Delta\\epsilon$ }, `Output` { $\\sigma_{t+1}$ }.\n",
+    "Um das PINA-Model zu testen werden wir folgende vorberechnete Werte verwenden: `Input` { $\\sigma_t$ }, `Output` { $E_s$ }.\n",
     "<br>\n",
     "### Variablendeklaration\n",
     "- $\\sigma_t$ = `sigma_t`\n",
