Update-Pina-PyTorch-Oedometer

--- a/01_oedometer_pytorch.ipynb
+++ b/01_oedometer_pytorch.ipynb
@@ -86,7 +86,10 @@
    "metadata": {},
    "source": [
     "# Load problem and generate trainings data from 00_problem_settings_functions.ipynb\n",
-    "returns `list_input` and `list_output` as type `list`"
+    "\n",
+    "Available classes: `Oedometer` <br>\n",
+    "Returns `list_input` and `list_output` as type `list` <br>\n",
+    "Returns `tensor_input` and `tensor_output` as type `tensor`"
    ]
   },
   {
@@ -97,6 +100,9 @@
    "outputs": [],
    "source": [
     "%run 00_problem_settings_functions.ipynb\n",
+    "\n",
+    "# Loads:\n",
+    "# Oedometer class\n",
     "\n",
     "# Returns\n",
     "# list_input: list\n",
