--- a/02_oedometer_pina.ipynb
+++ b/02_oedometer_pina.ipynb
@@ -92,7 +92,8 @@
     "# Load problem and generate  data from 00_problem_settings_functions.ipynb\n",
     "\n",
     "Available classes: `Oedometer` <br>\n",
-    "Returns `list_input` and `list_output` as type `list`"
+    "Returns `list_input` and `list_output` as type `list` <br>\n",
+    "Returns `tensor_input` and `tensor_output` as type `tensor`"
    ]
   },
   {
@@ -111,8 +112,8 @@
     "# list_input: list\n",
     "# list_output: list\n",
     "\n",
-    "# input_tensor: tensor\n",
-    "# output_tensor: tensor"
+    "# tensor_input: tensor\n",
+    "# tensor_output: tensor"
    ]
   },
   {
