--- a/02_oedometer_pina.ipynb
+++ b/02_oedometer_pina.ipynb
@@ -616,20 +616,7 @@
    "id": "98b78c6b-22bf-4a9a-8d00-be05b47deb71",
    "metadata": {},
    "source": [
-    "# Training eines Physics-Informed Neural Networks (PINN) mit PINA\n",
-    "\n",
-    "Dieser Code definiert und trainiert ein **Physics-Informed Neural Network (PINN)** zur Lösung des Problems in PINA.\n",
-    "\n",
-    "- **Modell (`FeedForward`)**: Ein neuronales Netz mit drei versteckten Schichten (`[50, 50, 50]`), das mit der ReLU-Aktivierungsfunktion arbeitet.\n",
-    "- **PINN-Objekt (`PINN`)**: Erstellt das PINN-Modell, das die physikalischen Randbedingungen des Problems berücksichtigt.\n",
-    "- **TensorBoard-Logger (`TensorBoardLogger`)**: Speichert Trainingsmetriken zur Visualisierung.\n",
-    "- **Trainer (`Trainer`)**: Führt das Training für 1500 Epochen mit Batch-Größe 10 durch.\n",
-    "- **Training starten (`trainer.train()`)**: Startet den Optimierungsprozess und protokolliert die Metriken.\n",
-    "\n",
-    "Am Ende wird die **finale Loss-Funktion** ausgegeben, um die Trainingsqualität zu bewerten.\n",
-    "\n",
-    "**Mehr zu `Trainer`:**  \n",
-    "[PINA-Dokumentation – Trainer](https://mathlab.github.io/PINA/_rst/trainer.html)\n"
+    "# Training eines Physics-Informed Neural Networks (PINN) mit PINA"
    ]
   },
   {
