Update-Pina-PyTorch-Oedometer

--- a/01_oedometer_pytorch.ipynb
+++ b/01_oedometer_pytorch.ipynb
@@ -5,7 +5,7 @@
    "id": "c5f4335f-371f-4efa-8556-b97e8fa67aaa",
    "metadata": {},
    "source": [
-    "# MODUL PyTorch"
+    "# MODUL PyTorch (Python 3.12)"
    ]
   },
   {
