--- a/02_oedometer_pina.ipynb
+++ b/02_oedometer_pina.ipynb
@@ -7,7 +7,7 @@
     "jp-MarkdownHeadingCollapsed": true
    },
    "source": [
-    "# MODUL PINA"
+    "# MODUL PINA (Python 3.12)"
    ]
   },
   {
