--- a/01_oedometer_pytorch.ipynb
+++ b/01_oedometer_pytorch.ipynb
@@ -648,8 +648,8 @@
     "    plt.plot(sigma_true, e_s_true_plot, label='$E_{s,true}$')\n",
     "\n",
     "    plt.gca().invert_yaxis()\n",
-    "    plt.xlabel('Sigma_t')\n",
-    "    plt.ylabel('Epsilon')\n",
+    "    plt.xlabel('$\\sigma_t$')\n",
+    "    plt.ylabel('$\\epsilon$')\n",
     "    plt.title(f'Spannungsdehnungs Verlauf mit $\\sigma_0={start_sigma}$ und $\\Delta\\epsilon=0.0005$')\n",
     "    plt.legend()\n",
     "    plt.show()\n",
